--- a/Configs/.config/starship/starship.toml
+++ b/Configs/.config/starship/starship.toml
@@ -3,7 +3,7 @@ format = """\
     $username \
     $os \
     $time \
-    $git_branch$git_commit$git_state $git_status \
+    $git_branch$git_commit$git_state$git_status \
     \n\
     $directory \
     $character\
@@ -77,13 +77,13 @@ format = '\[[$symbol$branch]($style)\]'
 format = '\[[$symbol$account(@$domain)(\($region\))]($style)\]'
 
 [git_branch]
-format = '\[[$symbol$branch]($style)'
+format = '\[[$symbol$branch]($style)\]'
 
 [git_status]
 ahead = '⇡${count}'
 behind = '⇣${count}'
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
-format = '([$all_status$ahead_behind\]]($style))'
+format = '\[([$all_status$ahead_behind]($style))\]'
 
 [golang]
 format = '\[[$symbol($version)]($style)\]'
