--- a/Configs/.config/starship/starship.toml
+++ b/Configs/.config/starship/starship.toml
@@ -83,7 +83,7 @@ format = '\[[$symbol$branch]($style)\]'
 ahead = '⇡${count}'
 behind = '⇣${count}'
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
-format = '\[([$all_status$ahead_behind]($style))\]'
+format = '(\[[$all_status$ahead_behind]($style)\])'
 
 [golang]
 format = '\[[$symbol($version)]($style)\]'
