--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -78,6 +78,7 @@ bindd = $mainMod, J, $d toggle split, togglesplit
 $l=Launcher
 $d=[$l|Apps]
 bindd = $mainMod, Return, $d terminal emulator , exec, $TERMINAL
+bindd = $mainMod Alt, T, $d dropdown terminal , exec, [float; move 20% 5%; size 60% 60%] $TERMINAL
 bindd = $mainMod, T, $d file explorer , exec, $EXPLORER
 bindd = $mainMod, E, $d text editor , exec, $EDITOR
 bindd = $mainMod, B, $d web browser , exec, $BROWSER
@@ -145,7 +146,8 @@ bindd = $mainMod, K, $d next waybar layout , exec, $scrPath/wbarconfgen.sh n # n
 bindd = $mainMod Shift, K, $d previous waybar layout , exec, $scrPath/wbarconfgen.sh p # previous waybar mode
 bindd = $mainMod Shift, Backspace, $d wallbash mode selector , exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m # launch wallbash mode select menu
 bindd = $mainMod, Backspace, $d select a theme, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
-bindd = $mainMod, D, $d select animation, exec, $scrPath/animations.sh --select # launch animation select menu
+bindd = $mainMod, D, $d select animation, exec, pkill -x rofi || $scrPath/animations.sh --select # launch animation select menu
+
 ##      bindd = $mainMod Alt, Right, $d next global wallpaper , exec, $scrPath/wallpaper.sh -Gn # next global wallpaper
 ##      bindd = $mainMod Alt, Left, $d previous global wallpaper , exec, $scrPath/wallpaper.sh -Gp # previous global wallpaper
 
